--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: java
 jdk:
   - openjdk11
 
+env:
+  - NODE_VERSION="10"
+
+before_install:
+  - nvm install $NODE_VERSION
+
 addons:
   sonarcloud:
     organization: "wcrasta"
