Attempting to address errors in logs

--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -1,4 +1,4 @@
-logging.level.root=DEBUG
+spring.output.ansi.enabled=always
 
 server.port=8443
 server.ssl.key-store=classpath:yahoo-fantasy-local.jks
