--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+logging.level.root=INFO
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSSXXX
+server.error.include-stacktrace=never
+
 server.servlet.session.timeout=15m
 server.error.whitelabel.enabled=false
 
