--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.0</version>
+    <version>2.6.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.warrencrasta</groupId>
@@ -26,7 +26,7 @@
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.sources>src/main/java,src/main/resources</sonar.sources>
     <sonar.coverage.exclusions>**/js/**, **/YahooFantasyApplication.java,
-      **/yahoo/config/**, **/yahoo/domain/**, **/yahoo/dto/**
+      **/yahoo/config/**, **/yahoo/domain/**, **/yahoo/dto/**, **/yahoo/controller/exception/**
     </sonar.coverage.exclusions>
   </properties>
 
@@ -101,6 +101,14 @@
       <artifactId>mockwebserver</artifactId>
       <version>${okhttp3-version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   </dependencies>
 
