--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+dist: jammy
+
 language: java
 
 jdk:
-  - openjdk11
+  - openjdk21
 
 env:
-  - NODE_VERSION="16"
+  - NODE_VERSION="20"
 
 before_install:
   - nvm install $NODE_VERSION
